--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,27 @@
 body {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    margin: 0%;
+    margin: 0;
+    padding: 0;
+    background-color:#475569;
+  }
+.navbar{
+    padding: 20px;
+    text-align: left; 
+    width: 149.26px;
+    height: 37.49px; 
+}
+.navbar a {
+    color: white;
+    font-weight: bold;
+    font-size: 35.37%;
+    align: center;
+}
+.hero-section {
+    padding: 100px 20px;
+    position: relative;
+}
+.hero-section h1 {
+    width: 580px;
+    height: 400px;
+    top: 298px;
+    left: 365px;
 }
