--- a/styles.css
+++ b/styles.css
@@ -102,8 +102,14 @@ font-weight: 600;
     bottom: 0;
     left: 15%;
   
-    background: blue;
-    opacity: 0.2;
+    background: rgb(255, 255, 255);
+    background: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 1) 50%,
+      rgba(255, 255, 255, 0) 100%
+    );
+        opacity: 0.2;
   
     transition: all 1s cubic-bezier(0.15, 0.83, 0.66, 1);
   }
@@ -127,4 +133,57 @@ font-weight: 600;
 .hero-image img{
     width: 100%;
     height:auto;
+}
+
+.foreign-section{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: aliceblue;
+    padding: 10%;
+}
+
+.currency-icons {
+    position: relative;
+
+}
+
+.currency-icon {
+    position: absolute;
+    animation: float 4s ease-in-out infinite;
+}
+
+.currency-icon:nth-child(1){
+    top: 0;
+    left: 10px;
+}
+
+.currency-icon:nth-child(2){
+    top: 50px;
+    left: 30px;
+}
+
+.content {
+    max-width: 600px;
+}
+
+h2{
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+p{
+    font-size: 16px;
+    color: rgb(#666, 0, 0);
+    margin: 20px;
+}
+ul {
+    list-style-type: disc;
+    padding-left: 20px;
+}
+
+li{
+    font-size: 14px;
+    color: rgb(25#444, 255, 255);
 }
