--- a/styles.css
+++ b/styles.css
@@ -200,49 +200,83 @@ li{
 
 .section {
     text-align: center;
-    max-width: 900px;
+    justify-content: center;
+    align-items: center;
+    max-width:max-content;
+    padding-left: 400px;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,200px);
 }
+.content2 h3 {
+    font-weight: 500;
+    font-size: 50px;
+    color: #f6f8fc;
+        align-items: center;}
 
-.content h1 {
-    font-size: 2.5rem;
-    margin-bottom: 10px;
-}
-
-.content p {
-    font-size: 1.2rem;
-    margin-bottom: 40px;
+.content2 p {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    align-items: center;
+    color: #f6f8fc;
 }
 
 .card-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Two columns */
-    gap: 20px; /* Space between cards */
+    grid-template-columns: repeat(2, 1fr);
+     gap: 20px; 
 }
 
 .card {
-    background-color: rgba(255, 255, 255, 0.1); /* Slightly transparent white */
+    background-color: #fff;
+    width: 399px;
+    height: 479px;
     padding: 20px;
     border-radius: 10px;
     text-align: left;
     transition: transform 0.3s ease-in-out;
 }
 
-.card:hover {
-    transform: translateY(-10px); /* Hover effect to lift the card */
+.card-1 {
+    background-color: #fff;
+    width: 399px;
+    height: 550px;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: left;
+    transition: transform 0.3s ease-in-out;
+    grid-row: span 2;
+}
+
+
+.card:hover,
+.card-1:hover {
+    transform: translateY(-10px); 
 }
 
 .icon {
-    text-align: center;
-    margin-bottom: 10px;
+    position:relative;
+    top: 86px;
+    left: 86px;
 }
 
-.card h2 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
+ h4 {
+    margin-top: 195px;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    color: #475569;
+    top: 195px;
+    left: 68px;
+    
 }
 
-.card p {
-    font-size: 1rem;
+ .p3 {
+    top: 249px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    color: #64748b;
 }
 
 @media (max-width: 768px) {
