--- a/styles.css
+++ b/styles.css
@@ -279,8 +279,80 @@ li{
     color: #64748b;
 }
 
+h5 {
+    text-align: center;
+    font-size: 2em;
+    margin: 20px 0;
+}
+
+section{
+    padding: 50px;
+    background-color: #ffff;
+    margin: 20px 0;
+}
+.how-it-works {
+    background-color: #f9f9f9;
+    padding-bottom: 30px;
+}
+
+.steps-container {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    padding-top: 20px;
+    }
+
+    .step {
+        width: 200px;
+        text-align: center;
+        padding:20px;
+        background-color: #fff;
+        box-shadow: 0 2px 10px rgba (0, 0, 0, 0.1);
+        border-radius: 8px;
+    }
+
+    .icon2 {
+        font: size 16px;
+        color: #64748b ;
+    }
+
+    .step h6 {
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 18px;
+        color: #475569;
+    }
+
+    .step p {
+        color:#64748b
+    }
+
+    .ready {
+        background-color: inherit;
+        color: #e2ebf0;
+        text-align: center;
+          }
+
+.ready h6{
+    font-size: 60px;
+    font-weight: 500;
+    line-height: 72px;
+}
+.ready p{
+font-size: 20px;
+font-weight: 400;
+line-height: 30px;
+}
+    .ready p,
+    .ready h6 {
+        margin-bottom: 20px;
+    }
+
+
+
 @media (max-width: 768px) {
     .card-container {
         grid-template-columns: 1fr; /* Single column layout on smaller screens */
     }
 }
+
