--- a/styles.css
+++ b/styles.css
@@ -281,13 +281,22 @@ li{
 
 h5 {
     text-align: center;
-    font-size: 2em;
-    margin: 20px 0;
+    font-size: 60px;
+    line-height: 72px;
+    font-weight: 500;
+    color: #475569;
 }
+.p6 {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    width: 294px;
 
-section{
-    padding: 50px;
-    background-color: #ffff;
+
+}
+section .how-it-works{
+    padding-top: 50px;
+    background-color: #f9f9f9;
     margin: 20px 0;
 }
 .how-it-works {
@@ -312,8 +321,9 @@ section{
     }
 
     .icon2 {
-        font: size 16px;
-        color: #64748b ;
+        color: #64748b;
+        width: 99px;
+        height: 99px;
     }
 
     .step h6 {
@@ -338,14 +348,15 @@ section{
     font-weight: 500;
     line-height: 72px;
 }
-.ready p{
+.p6 {
 font-size: 20px;
 font-weight: 400;
 line-height: 30px;
 }
+
     .ready p,
     .ready h6 {
-        margin-bottom: 20px;
+        margin-bottom: 0%;
     }
 
 
