--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 body{
     margin: 0;
     padding: 0;
-    /* width: 100vw; */
+    width: 100vw;
     box-sizing:border-box;
     background-color: #475569;  
     font-family: "Inter", sans-serif;
@@ -15,12 +15,16 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    background-image: url(./resources/Ellipse\ 12.png);
+    background-repeat: no-repeat ;
+    background-size: 1074px 1074px;
+    background-position: right;
+    background-attachment: fixed;
+    background-blend-mode:screen;
 }
   
 .logo-container {
     padding: 4rem;
-    background-color:#475569;
     text-align: left;
      display: flex;
     justify-content:flex-start;
@@ -151,11 +155,11 @@ font-weight: 600;
 .rectangle-section{
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    background-color: rgb(248, 250, 252) ;
+    justify-content:space-between;
+    background-color:#F6F8FC;
     width: 1920px;
-    height: 800px;
-    top: 961px;
+    height: 670px;
+   
 }
 
 .currency-icons {
@@ -163,75 +167,92 @@ font-weight: 600;
 
 } 
 
-.currency-icon {
-    position: absolute;
-    animation: float 4s ease-in-out infinite;
-} 
-
 .currency-icon:nth-child(1){
     top: 961px;
     left: 279px;
     height: 184px; 
-}
+   }
 
 .currency-icon:nth-child(2){
     top: 1145px;
     left: 30px;
-    rotate: -180deg;
+    rotate: 180deg;
 }
 .coin1 {
+    position: absolute;
     width: 184px;
     height: 184px;
-    top: 961px;
-    left:279px;
+    top: -427px;
+    left:412px;
 }
 .coin2  {
+    position:absolute;
     width: 223px;
     height: 207px;
-    top: 1761px;
-    left: 352px;
+    top: 223px;
+    left: 432px;
 }
 .coin3 {
+    position: absolute;
     width: 355px;
     height: 334px;
-    top: 1145px;
-    left:767px;
-    rotate: -180deg;
+    top: -275px;
+    left: 531px;
+    }
+
+.features-section {
+    position: absolute;
+    right: 25px;
 }
 .content {
     max-width: 600px;
 }
 
 h2{
+    width: 711px;
+    height: 97px;
     flex: 1;
     font-size: 36px;
     color: #475569;
     font-weight: 700;
-    padding-left: 450px;
-}
+   }
 
 .p2{
     font-size: 16px;
     color: #94a3b8;
-    padding-left: 450px;
     font-weight: 500;
     line-height: 28px;
     font-size: 18px;
+    width: 623px;
+    height: 93px;
 }
 
-ul {
-    list-style-type: disc;
-    padding-left: 500px;
+.feature-list {
+    list-style-type: none;
+    padding: 0;
 }
 
-li{
+.feature-list li{
+    position: relative;
+    padding-left: 25px;
+    margin-bottom: 10px;
     font-size: 20px;
     line-height: 30px;
     color: #475569;
     font-weight: 500;
 }
 
+.feature-list li::before {
+    content: url(./resources/BadgeCheck.png);
+    width: 30px;
+    height: 30px;
+    top: auto;
+    left: -15px;
+    position: absolute;
+}
+
 .section {
+    position: relative;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -240,13 +261,27 @@ li{
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(2,200px);
 }
+
+.content2 {
+    position: absolute;
+    top: 199px;
+    left: -345px;
+   
+}
 .content2 h3 {
+    width: 723px;
+    height: 72px;
     font-weight: 500;
-    font-size: 50px;
+    font-size: 60px;
     color: #f6f8fc;
-        align-items: center;}
+    text-align: center;
+    line-height: 72px;
+    }
 
 .content2 p {
+    width: 474px;
+    height: 60px;
+    left: -150px;
     font-size: 20px;
     font-weight: 400;
     line-height: 30px;
@@ -256,6 +291,9 @@ li{
 
 .card-container {
     display: grid;
+    position: absolute;
+    top:544px;
+    left: -450px;
     grid-template-columns: repeat(2, 1fr);
      gap: 20px; 
 }
@@ -328,17 +366,18 @@ h5 {
 
 }
 section .how-it-works{
-    /* padding-top: 50px; */
-    /* background-color: #F6F8FC; */
-    /* margin: 20px 0; */
+    position: relative;
+padding-top: 50px;
+background-color: #F6F8FC;
+margin: 20px 0;
 }
 .how-it-works {
+    position: absolute;
     background-color: #f6f8fc;
     padding-bottom: 30px;
     width: 1920px;
     height: 565px;
-    top: 3354px;
-    left: -1px;
+    top: 3650px;
 }
 
 .steps-container {
@@ -346,19 +385,13 @@ section .how-it-works{
     justify-content: center;
     gap: 40px;
     padding-top: 20px;
-    /* width: 294px;
-    height: 203px; */
     }
 
     .step {
         width: 294px;
         height: 203px;
-        top: 3563px;
-        left: 1186px;
+        fill: none;
         text-align: center;
-        /* padding:20px;  */
-        /* box-shadow: 0 2px 10px rgba (0, 0, 0, 0.1); */
-        /* border-radius: 8px; */
     }
 
     .icon2 {
@@ -372,13 +405,21 @@ section .how-it-works{
         font-weight: 600;
         line-height: 18px;
         color: #475569;
+        margin: 0;
     }
 
     .step p {
         color:#64748b
     }
-
+.c-t-a {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    top: 2351px;
+   
+}
     .ready {
+        position: absolute;
         background-color: inherit;
         color: #f6f8fc;
         text-align: center;
@@ -387,200 +428,374 @@ section .how-it-works{
           }
 
 .ready h6{
-    font-size: 60px;
+        font-size: 60px;
     font-weight: 500;
     line-height: 72px;
+    margin-bottom: 0px;
 }
-.p6 {
+.ready p {
+    justify-items: center;
     width: 474px;
     height: 60px;
 font-size: 20px;
 font-weight: 400;
 line-height: 30px;
+text-align: center;
+color: #F6F8FC;
 }
 
-    .ready p,
-    .ready h6 {
-        margin-bottom: 0%;
-    }
+   
+
 
 
 
 @media (max-width: 768px) {
-    .card-container {
-        grid-template-columns: 1fr; 
-    }
-}
-
-@media (max-width: 768px) {  
     body {
         height: auto;
+        padding: 50px;
+        justify-content: center;
     }
-    .card-container {
-        grid-template-columns: 1fr; 
-    }
-}
-
-@media (max-width: 768px) {
     .logo-container {
         justify-content: center;
         text-align: center;
     }
 
     .hero {
-        flex-direction: column; 
+        flex-direction:column; 
         padding: 50px;
         align-items: center;
         justify-content: center;
         text-align: center; 
-        top: 105.07px;
-       }
+              }
+    
+   .hero-image {
+        width: 236px;
+        height: 302.16px;
+        top: 438px;
+        left: 69px;
+    }
+
+    .mobile-phone {
+        width: 100%;
+        height: 100%;
+    }
 
     .flex-container{
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        margin-top: 105.07px;
+        /* margin-top: 105.07px; */
         border-radius: 7px;
-        width: 238px;
+        /* width: 238px; */
+        max-width: 283px; 
+        max-height: 285px;
     }
 
     .text-content {
-        max-width: 217px; 
+        justify-content: center;
         position: relative;
         padding-right: 0; 
         text-align: center;
-    }
+        top: -120px;
+    } 
         
     .text-content h1 {
         display:grid;
+        text-align: center;
         line-height: 38px; 
-        font-weight: 700px;
         font-size: 30px; 
-        margin-top: 438px;
-        left: 69px;
-    }
+        width: 217px;
+        height: 109.23px;
+        position: relative;
+        left: -50px;
         
+        
+    }
+ .vector {
+    width: 138.92px;
+    height: 6.75px;
+    border: 1.5px;
+    rotate: 0.18deg;
+ }       
  .text-content p {
-         font-size: 16px; 
+         font-size: 14px;
+         line-height: 20px; 
+         text-align: center;
+         width: 283px;
+         height: 81px;
+         position: relative;
+         left: -64px;
  }
         
  .cta-button {
-        width: 100%; 
+        width: 143.66px;
+        height: 44.63px;
         padding: 12px 10px; 
         font-size: 1rem; 
   }
         
-        
- .hero-image img {
-        width: 236px;
-       height: 302.16px;
-       top: 438px;
-       left: 69px;
-       position: relative;
-}
-        
+            
  .rectangle-section {
+    position: relative;
+    padding-left: 63px;
         flex-direction: column;
-        padding: 50px;
+        width: 388px;
+        height: 444px;
+        align-items: center;
+        justify-items: center;
+        justify-content: center;
             }
-        
+
+.coin1 {
+    display: none;
+}
+.coin3 {
+    position:absolute;
+    display: flex;
+    width: 99px;
+    height: 93px;
+    top: -274px;
+    left: -181px;
+}
+
+.coin2{
+    display: inline-block;
+    width: 68px;
+    height: 68px;
+    top: 186px;
+    left: 101px;
+} 
+
+.feature-list li{
+    font-size: 12px;
+    line-height: 18px;
+    align-items: center;
+    color: #475569;
+    text-align: left;
+    padding: 0 95px;
+
+}
+.feature-list li::before {
+    width: 2256x;
+    height: 18px;
+    top: -7px;
+    left: 63px;
+}
+
 h2, .p2 {
-        padding-left: 0;
+        padding: 0 50px;
         text-align: center; 
             }
-h2, h3, h4, h5 {
+
+h2, h3, h5 {
     font-size: 20px;
     line-height: 30px;
     text-align: center;
     font-weight: 700;
-    top: 842px;
-    width: 311px;
 }
-.p2, .p3 {
+h2 {
+    top: 842px;
+    left: 40px;
+    width: 311px;
+    height: 91px;
+    color: #475569;
+}
+
+.p2{
     font-size: 12px;
     width: 295px;
     height: 59px;
     line-height: 18px;
+    color: #94a3b8;
 }
 
-ul {
-    padding-left: 0;
-    text-align: left;
-    width: 226px;
-    padding-left: 71px ;
-}
-li{
-    font-size: 12px;
-    line-height: 18px;
-    height: 18px;
-}
-.coin2 {
-    width: 99px;
-    height: 93px;
-    top: 740px;
-    position: absolute;
-    left: 114px;
-    rotate: -180 deg;
-}
-
-.coin1 {
-    width: 68px;
-    height: 68px;
-    position: relative;
-    top: 1116px;
-    left: 313px;
-}
 
 .section {
+    position: relative;
     width: 311px;
     height: 1062px;
-    top: 1218px;
-    left: 40px;
-    padding-left: 0;
+   padding-left: 0;
     display: block;
+    justify-content: center;
+    align-items: center;
             }
-        
+ .content2 {
+    position: absolute;
+    top: 40px;
+    left: -150px;
+    width: 295px;
+    height: 78px;    
+    align-items: center;
+    justify-content: center;
+    color: #f6f8fc;
+ }
 .content2 h3 {
-        font-size: 36px; 
+    width: 250px;
+    height: 30px;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 30px;
+    text-align: center; 
             }
-        
-.card-container {
-        grid-template-columns: 1fr; 
-     }
-        
-.card, .card-1 {
-        width: 100%; 
-        height: auto;   
-     }
-
-h6 {
+.content2 p{
+    width: 295px;
+    height: 40px;
     font-size: 14px;
+    font-weight: 500;
     line-height: 20px;
     text-align: center;
-    font-weight: 600;
-    top: 2481px;
-    width: 123px;
-}
-
-.p6 {
-    font-size: 14px;
-    line-height: 20px;
-    font-weight: 400px;
-    width: 244px;
-    height: 40px;
-    justify-content: left;
-
-}
+}        
+.card-container {
+    position: absolute;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        justify-content: center;
+        width: 311px;
+        height: 1062px;
+        top: 190px;
+        left: -150px;
+     }
         
+     .card {
+        background-color: #fff;
+        width: 311px;
+        height: 216px;
+        padding: 20px;
+        border-radius: 10px;
+        text-align: justify; 
+       }
+    .card-1 {
+        background-color: #fff;
+        width: 311px;
+        height: 216px;
+        padding: 20px;
+        border-radius: 10px;
+        text-align: justify;
+        }
+    
+    .icon {
+        position: relative;
+        top: 0px;
+        left: 10px;
+    }
+    .icon img {
+        width: 50px;
+        height: 50px;
+        position: relative;
+         }  
+    h4 {
+        display: contents;
+        width: 118px;
+        height: 24px;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 24px;
+        top: 1434px;
+        left: 68px;
+        padding-left: 10px;
+    }
+    .p3 {
+        top: 1466px;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 18px;
+        color: #64748b;
+        width: 254px;
+        height: 81px;
+        padding-left: 10px;
+    }
+
+
+.how-it-works{
+    width: 390px;
+    height: 447px;
+    position: relative;
+    top: 311px;
+    padding-left: 64px;
+    padding-right: 64px;
+
+}        
 .steps-container {
         flex-direction: column;
         gap: 20px;
-    }
-        
+        align-items: center;
+        text-align: start    }
+
 .step {
-        width: 90%; 
-        margin: 0 auto;
-    }
-        
+    width: 286px;
+    height: 67px;
+    text-align: start;
+
+}
+.icon2{
+    width: 33px;
+    height: 33px;
+    position: absolute;
+    left: 100px;
+  }   
+.step h6{
+    position: relative;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    color: #475569;
+    margin: 0;
+    text-align: center;
+    left: -63px;
+    padding-left: 25px;
+}
+.step p {
+    width: 244px;
+    height: 40px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    color:#64748b;
+    padding-left:25px;
+}
+
+.c-t-a {
+    position: relative;
+    display: flex;
+    justify-content: center;
+  top: 310px;
+  left: 221px;
+   
+}
+    .ready {
+        position: absolute;
+        background-color: inherit;
+        color: #f6f8fc;
+        text-align: center;
+        width: 279 px;
+        height: 142.09x;
+        /* top: 0;
+        right: 0; */
+              }
+
+.ready h6{
+        font-size: 24px;
+    font-weight: 700;
+    line-height: 32px;
+    margin-bottom: 0px;
+    width: 250px;
+    height: 32px;
+}
+.ready p {
+    justify-items: center;
+    width: 279px;
+    height: 36px;
+font-size: 12px;
+font-weight: 500;
+line-height: 18px;
+text-align: center;
+color: #F6F8FC;
+}
+
+.c-t-a button {
+    position: absolute;
+    left: 50px;
+    margin-bottom: 15px;
+
+}
 }
